<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AcceleTracer</string>
    <string name="action_settings">Settings</string>
    <string name="assignment_text">"Alex Warren\nECE573 hw02"</string>
    <string name="launch_button_capture">"Capture"</string>
    <string name="launch_button_play">"Play"</string>
    <string name="launch_button_demo">"Demo"</string>
    <string name="launch_button_ulr_1">"Example 1"</string>
    <string name="launch_ulr_1">"www.rhizomatos.com/static/ece/acl1.txt"</string>
    <string name="launch_button_ulr_2">"Example 2"</string>
    <string name="launch_ulr_2">"www.rhizomatos.com/static/ece/acl2.txt"</string>
    <string name="no_file_comment">"Comment is blank"</string>
</resources>
