<!-- Alex Warren -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Launch" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dip"
        android:text="@string/assignment_text"
        android:textSize="30sp" />

    <!--
          <Button
        android:id="@+id/button_capture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dip"
        android:text="@string/launch_button_capture" />
    -->

    <EditText
        android:id="@+id/edit_web_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_url_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_button_ulr_1" />

        <Button
            android:id="@+id/button_url_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_button_ulr_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_demo"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_button_demo" />

        <Button
            android:id="@+id/button_play"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_button_play" />
    </LinearLayout>

</LinearLayout>